test/bad/coord4.pacc
/*
nocc 'parse.c: In function ‘pacc_parse’:
parse.c:527:24: error: incompatible types when assigning to type ‘struct nonsense’ from type ‘int’'
*/

/* XXX This is supposed to test that braceless numbers carry coords. They do,
 * but this test still comes out wrong as the C code looks like this:
          cur->value.u0=
#line 10 "parse.pacc"
                       (5)
#line 530 "parse.c"
          ;
 * and the error is reported at the equals sign.
 */

{ struct nonsense { int x; }; }
S :: struct nonsense <- "foo" -> 5
